--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-click-away-listener": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-giphy-searchbox": "^1.2.2",
     "react-icons": "^4.9.0",
     "react-moment": "^1.1.3",
     "react-simple-image-viewer": "^1.2.2",
